Set a minimum size on checkboxes and radio buttons

We really don't want them to shrink below their default size
unless explicitly specified. This matters when they are used
as flex items, because we would otherwise compute their
min-content size to zero and shrink it to a tiny size.

Bug: 719737
Change-Id: Ic5d6cbc134e079e76c307d049c5ec48d408214e0