third_party/WebKit/Source/core/layout/LayoutTheme.cpp
@@ -896,6 +896,17 @@ void LayoutTheme::SetSizeIfAuto(ComputedStyle& style, const IntSize& size) {
     style.SetHeight(Length(size.Height(), kFixed));
 }
 
+// static
+void LayoutTheme::SetMinimumSizeIfAuto(ComputedStyle& style,
+                                       const IntSize& size) {
+  // We only want to set a minimum size if no explicit size is specified, to
+  // avoid overriding author intentions.
+  if (style.MinWidth().IsIntrinsicOrAuto() && style.Width().IsIntrinsicOrAuto())
+    style.SetMinWidth(Length(size.Width(), kFixed));
+  if (style.MinHeight().IsAuto() && style.Height().IsAuto())
+    style.SetMinHeight(Length(size.Height(), kFixed));
+}
+
 void LayoutTheme::AdjustCheckboxStyleUsingFallbackTheme(
     ComputedStyle& style) const {
   // If the width and height are both specified, then we have nothing to do.
@@ -907,6 +918,7 @@ void LayoutTheme::AdjustCheckboxStyleUsingFallbackTheme(
   float zoom_level = style.EffectiveZoom();
   size.SetWidth(size.Width() * zoom_level);
   size.SetHeight(size.Height() * zoom_level);
+  SetMinimumSizeIfAuto(style, size);
   SetSizeIfAuto(style, size);
 
   // padding - not honored by WinIE, needs to be removed.
@@ -929,6 +941,7 @@ void LayoutTheme::AdjustRadioStyleUsingFallbackTheme(
   float zoom_level = style.EffectiveZoom();
   size.SetWidth(size.Width() * zoom_level);
   size.SetHeight(size.Height() * zoom_level);
+  SetMinimumSizeIfAuto(style, size);
   SetSizeIfAuto(style, size);
 
   // padding - not honored by WinIE, needs to be removed.
